--- a/src/views/main/main.view.scss
+++ b/src/views/main/main.view.scss
@@ -2,8 +2,11 @@
 
     display: flex;
     height: 100%;
-    
+ 
     .notesPane {
         background-color: red;
+    }
+    .contentPane{
+        width: 100%;
     }
 }
