--- a/src/components/divider/divider.component.scss
+++ b/src/components/divider/divider.component.scss
@@ -7,6 +7,10 @@
     justify-items: center;
     align-items: center;
 
+    // To take less space
+    // margin-top: -0.5em;
+    // margin-bottom: -0.5em;
+
     .dividerLine {
         background-color: #ddd;
         height: 2px;
