--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,6 @@
-html, body {
+html, body, #root {
+    height: 100%;
+    width: 100%;
     margin: 0;
     padding: 0;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
