--- a/src/components/text-outline-pane/text-outline-pane.component.scss
+++ b/src/components/text-outline-pane/text-outline-pane.component.scss
@@ -1,4 +1,4 @@
-.noChapterPlaceholder{
+.noChapterPlaceholder {
     width: 100%;
     height: 100%;
     display: flex;
@@ -6,4 +6,17 @@
     justify-content: center;
     align-items: center;
     gap: 1em;
+}
+
+.loadingBar {
+    width: 100%;
+    height: 100%;
+    font-size: 10em;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    & > * {
+        color: green;
+    }
 }
