--- a/src/index.css
+++ b/src/index.css
@@ -5,3 +5,8 @@ html, body, #root {
     padding: 0;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
+
+h1, h2, h3, h4, h5, h6, p {
+    margin: 0;
+    padding: 0;
+}
