--- a/src/views/login/login.view.scss
+++ b/src/views/login/login.view.scss
@@ -28,6 +28,7 @@
 
         @media (min-width:900px) {
             padding: 5em;
+            justify-content: center;
         }
     }
 
@@ -93,6 +94,7 @@
         justify-content: center;
         align-items: center;
         width: 100%;
+        height: 100%;
         align-content: stretch;
 
         background-color: #ddd;
