--- a/src/views/main/main.view.scss
+++ b/src/views/main/main.view.scss
@@ -7,7 +7,8 @@
     .notesPane {
         background-color: red;
     }
-    .contentPane{
+
+    .contentPane {
         width: 100%;
         height: 100%;
     }
@@ -20,6 +21,29 @@
         align-items: center;
         font-size: large;
         border-bottom: 1px #ddd solid;
-        color: #888
+        color: #888;
+
+
+        .headerElements {
+            display: grid;
+            width: 100%;
+            grid-template-columns: 10em auto 10em;
+            grid-template-areas: "left middle right";
+            align-items: center;
+            
+            .projectName {
+                grid-area: middle;
+                text-align: center;
+                justify-content: center;
+                & * {
+                    text-align: center;
+                }
+            }
+            .buttons{
+                grid-area: right;
+                display: flex;
+                justify-content: end;
+            }
+        }
     }
 }
