Everything new for the moveable item

--- a/src/components/moveable-object/moveable-object.component.scss
+++ b/src/components/moveable-object/moveable-object.component.scss
@@ -1,8 +1,11 @@
 .moveableObject {
-
+    display: flex;
 
     &:hover {
         &>.objectName {
+            opacity: 100%;
+        }
+        &>.buttonBar {
             opacity: 100%;
         }
     }
@@ -14,12 +17,17 @@
         cursor: default;
     }
 
+    .buttonBar{
+        opacity: 0;
+        display: flex;
+    }
+
     .textContent {
         display: grid;
         grid-template-columns: auto;
         grid-template-rows: auto;
         grid-template-areas: "content";
-
+        width: 100%;
         .moveableContent {
             grid-area: content;
         }
