--- a/src/components/moveable-object/moveable-object.component.scss
+++ b/src/components/moveable-object/moveable-object.component.scss
@@ -19,7 +19,10 @@
     }
 
     .buttonBar {
-        opacity: 0;
+        display: flex;
+
+        // opacity: 0;
+        padding-right: 3px;
         display: flex;
         color: #888;
 
