--- a/src/components/text-outline-pane/text-outline-pane.component.scss
+++ b/src/components/text-outline-pane/text-outline-pane.component.scss
@@ -1,22 +1,26 @@
-.noChapterPlaceholder {
-    width: 100%;
+.textOutlinePaneComponent {
     height: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    gap: 1em;
-}
 
-.loadingBar {
-    width: 100%;
-    height: 100%;
-    font-size: 10em;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    .noChapterPlaceholder {
+        width: 100%;
+        height: 100%;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        gap: 1em;
+    }
 
-    & > * {
-        color: green;
+    .loadingBar {
+        width: 100%;
+        height: 100%;
+        font-size: 10em;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+
+        &>* {
+            color: green;
+        }
     }
 }
