--- a/src/components/moveable-object/moveable-object.component.scss
+++ b/src/components/moveable-object/moveable-object.component.scss
@@ -21,7 +21,7 @@
     .buttonBar {
         display: flex;
 
-        // opacity: 0;
+        opacity: 0;
         padding-right: 3px;
         display: flex;
         color: #888;
