--- a/src/views/main/main.view.scss
+++ b/src/views/main/main.view.scss
@@ -20,7 +20,7 @@
         justify-content: center;
         align-items: center;
         font-size: large;
-        border-bottom: 1px #ddd solid;
+        // border-bottom: 1px #ddd solid;
         color: #888;
 
 
