--- a/src/components/project-header/project-header.component.scss
+++ b/src/components/project-header/project-header.component.scss
@@ -1,18 +1,19 @@
 .projectHeaderComponent {
     padding: 1em;
 
-    .parent {
-        background-color: yellow;
+    .header {
+        margin:0;
+        font-size: 2rem;
+        font-weight: lighter !important;
+        padding-bottom:0.2em;
     }
 
-    .child1 {
-        background-color: red;
+    .header * {
+        font-weight: lighter;
+        font-size: 2rem;
     }
-    .child2 {
-        background-color: green;
-        position: relative;
-        left: -10em;
-        width: 10em;
-        text-align: right;
+
+    .description {
+        font-size: 1rem
     }
 }
