--- a/src/components/moveable-object/moveable-object.component.scss
+++ b/src/components/moveable-object/moveable-object.component.scss
@@ -2,25 +2,51 @@
     display: flex;
 
     &:hover {
-        &>.objectName {
+        & .objectName {
             opacity: 100%;
         }
 
-        &>.buttonBar {
+        & .buttonBar {
             opacity: 100%;
+        }
+        & .lockingToolbar{
+            visibility: visible;
         }
     }
 
-    &>.objectName {
+    & .objectName {
         font-size: 0.8em;
         color: #888;
         opacity: 0;
         cursor: default;
     }
 
+
+    .toolbar {
+        display: grid;
+        grid-template-columns: auto;
+        grid-template-rows: auto 3em;
+        grid-template-areas: "buttons" "locked";
+    }
+
+    .lockingToolbar {
+        grid-area: locked;
+        visibility: hidden;
+        align-self: center;
+        justify-self: center;
+        font-size: 2em;
+        color: #844;
+        cursor: pointer;
+    }
+
+    .currentlyLocked {
+        visibility: visible;
+    }
+
     .buttonBar {
         display: flex;
 
+        grid-area: buttons;
         opacity: 0;
         padding-right: 3px;
         display: flex;
