Add Error handling

--- a/src/components/itemSide/item-side.component.scss
+++ b/src/components/itemSide/item-side.component.scss
@@ -12,6 +12,13 @@
         height: 100%;
     }
 
+    .error-state {
+        border: 3px solid #FF6347;
+        border-radius: 10px;
+        box-sizing: 'border-box';
+        //   background-color: red;
+    }
+
     .locked {
         background-color: red;
     }
