--- a/src/views/layout/layout.view.css
+++ b/src/views/layout/layout.view.css
@@ -18,6 +18,7 @@
         top: 0;
         width: 3em;
         border-right: 1px solid #eee;
+        background-color: #F7F7F5;
     }
     .content {
         grid-area: content;
