--- a/src/components/sidebar/sidebar.component.scss
+++ b/src/components/sidebar/sidebar.component.scss
@@ -1,5 +1,9 @@
 .sidebarComponent {
-    display: flex;
+    display: grid;
+
+    grid-template-rows: 1em auto 3em;
+    grid-template-areas: "buffer" "content" "avatar";
+
     justify-content: space-between;
     flex-direction: column;
     align-items: center;
@@ -9,4 +13,23 @@
     -moz-box-sizing: border-box;
     box-sizing: border-box;
     padding: 0.5em 0;
+
+    & > * {
+        width: 100%;
+    }
+
+    .chapters {
+        grid-area: content;
+    }
+
+    .avatar {
+        grid-area: avatar;
+        display: flex;
+        width: 100%;
+        display: flex;
+        justify-content: center;
+        justify-items: center;
+        align-items: center;
+        gap: 1em
+    }
 }
