--- a/src/views/main/main.view.scss
+++ b/src/views/main/main.view.scss
@@ -25,15 +25,21 @@
 
 
         .headerElements {
-            display: grid;
+            display: flex;
+            justify-content: space-between;
             width: 100%;
-            grid-template-columns: 10em auto 10em;
-            grid-template-areas: "left middle right";
-            align-items: center;
+
+            position: fixed;
+            top: 0;
+            left: 0;
+            background-color: white;
+            z-index: 100;
+
 
             .sidebarButton {
                 grid-area: left;
                 font-size: 1.5em;
+
                 &>* {
                     color: #ddd;
                 }
@@ -60,6 +66,8 @@
                 grid-area: right;
                 display: flex;
                 justify-content: end;
+                gap: 0.5em;
+                padding-right: 1em;
             }
         }
     }
