--- a/src/components/sidebar/sidebar.component.scss
+++ b/src/components/sidebar/sidebar.component.scss
@@ -17,6 +17,19 @@
         width: 100%;
     }
 
+    .projectPanel {
+        cursor: pointer;
+        color: #666;
+        .projectName {
+            font-size: 0.9em;
+            font-weight: 600;
+        }
+        .projectMeta {
+            font-size: 0.8em;
+            font-weight: 100;
+        }
+    }
+
     .avatar {
         grid-area: avatar;
         display: flex;
