--- a/src/views/main/main.view.scss
+++ b/src/views/main/main.view.scss
@@ -3,6 +3,7 @@
     display: flex;
     height: 100%;
     flex-direction: column;
+    padding-top: 2em;
 
     .notesPane {
         background-color: red;
