--- a/src/views/layout/layout.view.css
+++ b/src/views/layout/layout.view.css
@@ -27,8 +27,17 @@
 
 .layoutWithoutSidebar {
     grid-template-rows: auto 2em;
-    grid-template-columns: auto;
-    grid-template-areas: "content" "footer";
+    grid-template-columns: 3em auto;
+    grid-template-areas: "sidebar content" "sidebar footer";
+
+    .smallSidebar {
+        position: fixed;
+        bottom: 0;
+        display: flex;
+        height: 100%;
+        flex-direction: column-reverse;
+        padding: 0.5em;
+    }
 }
 
 .layoutWithSidebar {
