start align avatar

--- a/src/components/sidebar/sidebar.component.scss
+++ b/src/components/sidebar/sidebar.component.scss
@@ -39,6 +39,7 @@
         justify-items: center;
         align-items: center;
         gap: 1em;
+        justify-content: flex-start;
     }
 
     .bottomIcons {
