Make the login nice again!

--- a/src/views/login/login.view.scss
+++ b/src/views/login/login.view.scss
@@ -4,42 +4,23 @@
     flex-direction: column;
     align-items: center;
 
-    @media (min-width:900px) {
-        display: grid;
-        grid-template-columns: 50% 50%;
-        grid-template-rows: auto;
-        grid-template-areas: "login img .";
-        overflow-y: hidden;
-    }
 
     height: 100%;
-
-    .img {
-        background-color: #ddd;
-        min-height: 100%;
-        grid-area: img;
-        min-width: 100%;
-        overflow: auto;
-        box-sizing: border-box;
-        padding: 1em;
-
+    .logo {
+        width: 5em;
+        padding-bottom: 1em;
+    }
+    .textInfo {
         display: flex;
         flex-direction: column;
-
-        @media (min-width:900px) {
-            padding: 5em;
-            justify-content: center;
-        }
-    }
-
-    .textInfo {
+        align-items: center;
         padding: 5em;
         align-content: stretch;
         box-sizing: border-box;
 
         .appName {
             font-size: 3em;
-            font-family: serif;
+            // font-family: serif;
         }
 
         .appDescription {
@@ -53,41 +34,16 @@
         padding: 1em;
     }
 
-    .paragraph {
-        display: grid;
-        grid-template-columns: 1fr;
-        grid-template-areas: "paragraph";
-
-        cursor: default;
-
-        * {
-            grid-area: paragraph;
-        }
-
-        .text {
-            opacity: 1;
-            transition: opacity 0.2s ease-in-out; // Add transition
-        }
-
-        .outline {
-            opacity: 0;
-            transition: opacity 0.2s ease-in-out; // Add transition
-        }
-
-        &:hover {
-            .text {
-                opacity: 0;
-            }
-
-            .outline {
-                opacity: 1;
-            }
-        }
+    .loginCard {
+        border: 1px solid #ccc;
+        box-shadow: 0 0 2em 2em #eee;
     }
-
+    .loginButton{
+        display: flex;
+        justify-content: center;
+    }
     .loginForm {
         box-sizing: border-box;
-        grid-area: login;
 
         display: flex;
         flex-direction: column;
@@ -97,21 +53,13 @@
         height: 100%;
         align-content: stretch;
 
-        background-color: #ddd;
+        background-color: #f7f7f5;
+    }
 
-        @media (min-width:900px) {
-            padding: 5em;
-            position: sticky;
-        }
-
-        .loginCard {
-            @media (min-width:900px) {
-                position: absolute;
-            }
-        }
-
-        .formElement {
-            width: 100%;
-        }
+    .oauthLogins {
+        display: flex;
+        flex-direction: column;
+        padding: 1em;
+        gap: 1em;
     }
 }
