--- a/src/components/item-qa-popup/item-qa-popup.component.scss
+++ b/src/components/item-qa-popup/item-qa-popup.component.scss
@@ -5,5 +5,10 @@
         display: flex;
         justify-content: space-between;
         padding-top: 1em;
+
+        .examples {
+            display: flex;
+            gap: 1em;
+        }
     }
 }
