Making shotcuts nice again!

--- a/src/views/main/main.view.scss
+++ b/src/views/main/main.view.scss
@@ -47,7 +47,9 @@
                 grid-area: final;
             }
         }
-
+        .viewIndicator{
+            padding: 0.4em;
+        }
         .headerElements {
             position: fixed;
             top: 0;
